--- a/web-app/tds/web-app/css/page/module/noticeManager/notice-edit-component.sass
+++ b/web-app/tds/web-app/css/page/module/noticeManager/notice-edit-component.sass
@@ -1,4 +1,13 @@
 .notice-edit-content
+  .locked-container
+    display: flex
+    flex-direction: row
+    justify-content: flex-end
+    align-items: center
+    label
+      margin-right: 10px
+    input
+      cursor: pointer
   .k-dropdown
     span
       background-color: white
