TM-13175 - Stylistic changes and gutting old functionality.

--- a/src/main/webapp/tds/web-app/app-js/modules/user/components/dashboard/user-dashboard.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/user/components/dashboard/user-dashboard.component.html
@@ -33,8 +33,7 @@
                 </kendo-grid>
                 <kendo-grid
                         [data]="taskList"
-                        [selectable]="true"
-                        style="max-height: 400px">
+                        [selectable]="true">
                     <ng-template kendoGridToolbarTemplate>
                         <img src="/tdstm/assets/icons/table.png"/>
                         <strong>Task Summary</strong> <span> - Active tasks assigned to you</span>
