TM-14544 Fix Bulk edit of our new Pi field will not accept the decimal place during input
Passing missing parameters required by the control

--- a/web-app/tds/web-app/app-js/shared/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
@@ -84,6 +84,9 @@
                                                         [name]="'controlNumber' + rowIndex"
                                                         [(ngModel)]="editRows.selectedValues[rowIndex].value"
                                                         [format]="editRows.selectedValues[rowIndex].field.constraints?.format"
+                                                        [allowNegative]="editRows.selectedValues[rowIndex].field.constraints?.allowNegative"
+                                                        [precision]="editRows.selectedValues[rowIndex].field.constraints?.precision"
+                                                        [separator]="editRows.selectedValues[rowIndex].field.constraints?.separator"
                                                         [min]="editRows.selectedValues[rowIndex].field.constraints?.minRange"
                                                         [max]="editRows.selectedValues[rowIndex].field.constraints?.maxRange">
                                     </tds-number-control>
