TM-14480 Fix issue displaying resize icon

--- a/src/main/webapp/tds/web-app/css/page/module/dataIngestion/data-script-etl-builder-component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/dataIngestion/data-script-etl-builder-component.sass
@@ -17,6 +17,9 @@
         border-width: 0 0 16px 16px
         border-color: transparent transparent #AAA transparent
         background: none
+        right: 0
+        bottom: 0
+        position: absolute
     .modal-content
       .modal-header
         display: flex
