--- a/src/main/webapp/tds/web-app/css/shared/directives/tds-ui-modal-decorator.sass
+++ b/src/main/webapp/tds/web-app/css/shared/directives/tds-ui-modal-decorator.sass
@@ -11,3 +11,6 @@
 			border-width: 0 0 16px 16px
 			border-color: transparent transparent #AAA transparent
 			background: none
+			right: 0
+			bottom: 0
+			position: absolute
