TM-13138 - Visual changes

--- a/src/main/webapp/tds/web-app/app-js/modules/planning/components/dashboard/planning-dashboard.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/planning/components/dashboard/planning-dashboard.component.html
@@ -1,1 +1,20 @@
-<span>Under Development</span>
+<div class="planning-dashboard-component">
+    <div class="phase-wrapper">
+        <div class="dashboard-div discovery-phase">
+            <span class="dashboard_head">Discovery Phase</span>
+            <div>
+                Progress bars here
+            </div>
+            <h4>Total Discovered</h4>
+            <div>Table Here</div>
+            <h4>Open Tasks</h4>
+            <div>Details here</div>
+        </div>
+        <div class="dashboard-div analysis-phase">
+            TEST
+        </div>
+        <div class="dashboard-div execution-phase">
+            TEST
+        </div>
+    </div>
+</div>
