TM-14532 - Fixing issues with the Dialog, making note to remove all of this sooner or later.

--- a/src/main/webapp/tds/web-app/css/tds-style.sass
+++ b/src/main/webapp/tds/web-app/css/tds-style.sass
@@ -41,7 +41,7 @@
 @import "shared/directives/tds-ui-modal-decorator"
 @import "page/index"
 // Legacy ONLY
-@import "legacy/support/index"
+@import "legacy/support/jqDialog"
 @import "legacy/assetExplorer/tds-angular-component"
 // Only General Layout for the Template
 @import "layout/top-nav"
