--- a/src/main/webapp/tds/web-app/css/legacy/support/jqDialog.sass
+++ b/src/main/webapp/tds/web-app/css/legacy/support/jqDialog.sass
@@ -46,17 +46,22 @@
         border-radius: 0px
         padding-top: 7px
         font-size: 16px
+        color: $color--white
+        padding: .4em 1em
+        position: relative
+        font-weight: bold
         button.ui-dialog-titlebar-close
             -webkit-appearance: none
             padding: 0
             cursor: pointer !important
-            background: 0 0 !important
             border: 0 !important
             font-size: 17px !important
-            margin-right: 5px !important
+            margin-top: 3px
+            background-color: transparent
             color: $color-material--blue1
+            float: right
+            background-image: url(../../../assets/images/ui-icons_ffffff_256x240.png)
             span.ui-icon
-                background-image: url(assets/images/ui-icons_ffffff_256x240.png)
                 font-size: 17px !important
                 margin-right: 2px !important
         button.ui-dialog-titlebar-close:hover
@@ -126,4 +131,8 @@
     opacity: 1
     filter: Alpha(Opacity=50)
     background: rgba(0, 0, 0, 0.3)
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
 /*z-index: 1050*/
