TM-13926 Implementing standar notices

--- a/web-app/tds/web-app/css/page/module/noticeManager/notice-eula-component.sass
+++ b/web-app/tds/web-app/css/page/module/noticeManager/notice-eula-component.sass
@@ -1,4 +1,5 @@
-.notice-eula-html-content
+.notice-eula-html-content,
+.notice-standard-html-content
   form
     padding-left: 20px
     padding-right: 20px
