TM-13926 implement moving between standard notices

--- a/web-app/tds/web-app/app-js/modules/noticeManager/components/eula/eula.component.html
+++ b/web-app/tds/web-app/app-js/modules/noticeManager/components/eula/eula.component.html
@@ -27,12 +27,7 @@
     </div>
 
     <div class="modal-footer form-group-center">
-	    <tds-button-custom
-			    (click)="onBack()"
-			    icon="chevron-left"
-			    title="Back"
-			    class="pull-left">
-	    </tds-button-custom>
+	    <tds-button-close (click)="onBack()" class="pull-left"></tds-button-close>
 
 	    <tds-button-custom
 			    (click)="onNext()"
