TM-13926 Fix issue coloring required tag indicator

--- a/web-app/tds/web-app/css/page/module/noticeManager/notice-edit-component.sass
+++ b/web-app/tds/web-app/css/page/module/noticeManager/notice-edit-component.sass
@@ -15,4 +15,8 @@
     span
       color: unset
       border: unset
+  .required-field::after
+    content: "*"
+    color: $color-message-error--red
+    margin-left: 4px
 
