--- a/web-app/tds/web-app/app-js/modules/noticeManager/components/view-edit/notice-view-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/noticeManager/components/view-edit/notice-view-edit.component.html
@@ -7,7 +7,7 @@
         <form name="noticeForm" role="form" data-toggle="validator" class="form-horizontal left-alignment" #noticeForm='ngForm'>
             <div class="box-body">
                 <div class="form-group">
-                    <label for="inputTitle" class="col-sm-3 control-label">Title: <span class="required_field">*</span></label>
+                    <label for="inputTitle" class="col-sm-3 control-label required-field">Title:</label>
                     <div class="col-sm-9">
                         <input type="text" name="title" id="inputTitle" class="form-control" placeholder="Notice Title"
                                [(ngModel)]="model.title"
@@ -15,7 +15,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="selectType" class="col-sm-3 control-label">Type: <span class="required_field">*</span></label>
+                    <label for="selectType" class="col-sm-3 control-label required-field">Type:</label>
                     <div class="col-sm-9">
                         <!--[valuePrimitive]="true"-->
                         <kendo-dropdownlist
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="col-sm-12 control-label">Message: <span class="required_field">*</span> </label>
+                    <label class="col-sm-12 control-label required-field">Message:</label>
                     <div class="col-sm-12">
                         <rich-text-editor
                             #htmlTextField="richTextEditor"
@@ -91,7 +91,7 @@
                 </div>
                 <div class="form-group"
                      *ngIf="noticeType && noticeType.typeId == EnumNoticeType.Mandatory">
-                    <label for="postMessageText" class="col-sm-12 control-label">Post Message Text: <span class="required_field">*</span></label>
+                    <label for="postMessageText" class="col-sm-12 control-label required-field">Post Message Text:</label>
 	                <div class="col-sm-12">
                         <input type="text"
                                class="form-control"
