TM-14565 The PECL report needs to be tweaked

--- a/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/tranman-menu/tranman-menu.component.html
+++ b/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/tranman-menu/tranman-menu.component.html
@@ -249,7 +249,7 @@
                         <a href="/tdstm/newsEditor/newsEditorList">List Event News</a>
                     </li>
                     <li *ngIf="hasPermission(permission.ReportViewEventPrep)" class="menu-child-item menu-planning-pre-checklist">
-                        <a href="/tdstm/reports/preMoveCheckList">Pre-event Checklist</a>
+                        <a href="/tdstm/reports/preMoveCheckList">Pre-Event Checklist</a>
                     </li>
                     <li class="menu-child-item menu-parent-planning-export-runbook">
                         <a href="/tdstm/moveEvent/exportRunbook">Export Runbook</a>
