TM-13926 Get rif of PostNoticeModel
Using rather NoticeModel

--- a/web-app/tds/web-app/app-js/modules/noticeManager/components/view-edit/notice-view-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/noticeManager/components/view-edit/notice-view-edit.component.html
@@ -65,7 +65,12 @@
                     <label for="sequence" class="col-sm-3 control-label">Sequence:</label>
                     <div class="col-sm-1">
                         <kendo-numerictextbox
-                                name="sequence" [value]="model.sequence" [format]="'n0'" [min]="0" [autoCorrect]="true">
+                                [spinners]="false"
+                                name="sequence"
+                                [value]="model.sequence"
+                                [format]="'n0'"
+                                [min]="0"
+                                [autoCorrect]="true">
                         </kendo-numerictextbox>
                     </div>
 	                <div class="col-sm-2">
