TM-13926 Safe html

--- a/web-app/tds/web-app/app-js/modules/noticeManager/components/eula/eula.component.html
+++ b/web-app/tds/web-app/app-js/modules/noticeManager/components/eula/eula.component.html
@@ -15,7 +15,7 @@
 		        <h4>{{model.name}}</h4>
 		        <div class="form-group">
 			        <div class="col-sm-12 html-container">
-				        <div [innerHTML]="model.htmlText"></div>
+				        <div [innerHTML]="sanitizer.bypassSecurityTrustHtml(model.htmlText)"></div>
 			        </div>
 		        </div>
 		        <div class="form-group" class="agreement-container">
