--- a/web-app/tds/web-app/app-js/modules/noticeManager/components/standard-notices/standard-notices.component.html
+++ b/web-app/tds/web-app/app-js/modules/noticeManager/components/standard-notices/standard-notices.component.html
@@ -14,7 +14,7 @@
 		        <h4>{{notice.name}}</h4>
 		        <div class="form-group">
 			        <div class="col-sm-12 html-container">
-				        <div [innerHTML]="notice.htmlText"></div>
+				        <div [innerHTML]="sanitizer.bypassSecurityTrustHtml(notice.htmlText)"></div>
 			        </div>
 		        </div>
 		        <div class="form-group" class="agreement-container">
