--- a/web-app/tds/web-app/app-js/modules/noticeManager/components/eula/eula.component.html
+++ b/web-app/tds/web-app/app-js/modules/noticeManager/components/eula/eula.component.html
@@ -12,7 +12,7 @@
               class="form-horizontal"
               #form='ngForm'>
 	        <div>
-		        <h4>{{model.name}}</h4>
+		        <h4>{{model.title}}</h4>
 		        <div class="form-group">
 			        <div class="col-sm-12 html-container">
 				        <div [innerHTML]="sanitizer.bypassSecurityTrustHtml(model.htmlText)"></div>
@@ -20,7 +20,7 @@
 		        </div>
 		        <div class="form-group" class="agreement-container">
 			        <input type="checkbox" name="agreement" id="agreement" [(ngModel)]="acceptAgreement">
-			        <label for="agreement"> {{'NOTICE.AGREEMENT' | translate}}</label>
+			        <label for="agreement"> {{ model.postMessageText || ('NOTICE.AGREEMENT' | translate) }}</label>
 		        </div>
 	        </div>
         </form>
