TM-14369 - Remove a lot of unnecesary calls on the Field Settings - Improvement to remove the DateTime Format and Timezone

--- a/src/main/webapp/tds/web-app/app-js/modules/fieldSettings/components/list/field-settings-list.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/fieldSettings/components/list/field-settings-list.component.html
@@ -10,8 +10,18 @@
 					</ul>
 					<div class="tab-content">
 						<div *ngFor="let value of domains" [ngClass]="{'active':isTabSelected(value.domain)}" class="tab-pane">
-							<field-settings-grid #grid="fieldSettingsGrid" (save)="onSaveAll($event)" (cancel)="onCancel($event)" (add)="onAdd($event)"
-							 (share)="onShare($event)" (delete)="onDelete($event)" (filter)="onFilter()" [data]="value" [state]="getCurrentState(value)"></field-settings-grid>
+							<field-settings-grid
+									#grid="fieldSettingsGrid"
+									(save)="onSaveAll($event)"
+									(cancel)="onCancel($event)"
+									(add)="onAdd($event)"
+							 		(share)="onShare($event)"
+									(delete)="onDelete($event)"
+									(filter)="onFilter()"
+									[data]="value"
+									[domains]="domains"
+									[state]="getCurrentState(value)">
+							</field-settings-grid>
 						</div>
 						<!-- /.tab-pane -->
 					</div>
