--- a/src/main/webapp/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
+++ b/src/main/webapp/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
@@ -62,6 +62,7 @@
     vertical-align: top
     width: 85%
     padding-left: 5px
+  tr .valueNW,
   .prop .valueNW
     text-align: left
     padding-left: 5px
