TM-14390 - Removed accidental debug property

--- a/src/main/webapp/tds/web-app/app-js/modules/assetComment/components/list/asset-comment-list.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/assetComment/components/list/asset-comment-list.component.html
@@ -30,7 +30,7 @@
 
                         <ng-template kendoGridCellTemplate *ngIf="column.type === 'action'" let-dataItem>
                             <div class="tds-action-button-set">
-                                <tds-button-edit tooltip="Edit Comment" ng-reflect-tooltip="Edit Comment" class="tds-generic-button" (click)="onEdit(dataItem)">
+                                <tds-button-edit tooltip="Edit Comment" class="tds-generic-button" (click)="onEdit(dataItem)">
                                 </tds-button-edit>
                             </div>
                         </ng-template>
