TM-14369 - Latest Module using the default timezone and date and date time format.

--- a/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/header/header.component.html
+++ b/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/header/header.component.html
@@ -40,8 +40,8 @@
                             <li class="user-body">
                                 <ul class="list-group">
                                     <li class="list-group-item"><a (click)="openEditPersonModal()" style="cursor: pointer;"><span class="glyphicon glyphicon-user user-menu-icon-badge"></span> Account Details</a></li>
-                                    <li class="list-group-item"><a (click)="openPrefModal()" style="cursor: pointer;"><span class="glyphicon glyphicon-time user-menu-icon-badge"></span> Date and Timezone</a></li>
-                                    <li class="list-group-item"><a (click)="openDateTimezoneModal()" style="cursor: pointer;"><span class="glyphicon glyphicon-pencil user-menu-icon-badge"></span> Edit Preferences</a></li>
+                                    <li class="list-group-item"><a (click)="openDateTimezoneModal()" style="cursor: pointer;"><span class="glyphicon glyphicon-time user-menu-icon-badge"></span> Date and Timezone</a></li>
+                                    <li class="list-group-item"><a (click)="openPrefModal()" style="cursor: pointer;"><span class="glyphicon glyphicon-pencil user-menu-icon-badge"></span> Edit Preferences</a></li>
                                 </ul>
                             </li>
                             <!-- Menu Footer-->
