--- a/src/main/webapp/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/src/main/webapp/tds/web-app/css/elements/component/task-detail-component.sass
@@ -286,6 +286,8 @@
 
     .task-ready
       @include task-ready
+    .task-ready:hover
+      @include task-ready
 
     .task-started
       @include task-started
