--- a/src/main/webapp/tds/web-app/app-js/modules/assetManager/components/asset-view-config/asset-view-config.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/assetManager/components/asset-view-config/asset-view-config.component.html
@@ -161,7 +161,7 @@
 						<div class="col-md-12">
 							<div class="form-group">
 								<label for="" style="margin-bottom:15px;font-size:14px;">Drag and drop to change the column order</label>
-								<kendo-sortable #kendoSortableInstance="kendoSortable" [data]="draggableColumns" [navigatable]="false" [animation]="false"
+								<kendo-sortable [kendoSortableBinding]="draggableColumns" [navigatable]="true" [animation]="false"
 								 class="row" style="margin-right:0px;" itemClass="item"  (dragEnd)="onDragEnd()">
 									<ng-template let-item="item" let-index="index">
 										<div class="row" style="height: 35px;">
