--- a/src/main/webapp/tds/web-app/css/base/taskstatus-mixins.sass
+++ b/src/main/webapp/tds/web-app/css/base/taskstatus-mixins.sass
@@ -20,7 +20,7 @@
 
 @mixin task-ready
   background-color: $color-task-ready-bg--green !important
-  color: $color--white
+  color: $color--white !important
   font-weight: bold
 
 @mixin task-started
