--- a/src/main/webapp/tds/web-app/css/shared/components/action-button.component.sass
+++ b/src/main/webapp/tds/web-app/css/shared/components/action-button.component.sass
@@ -11,10 +11,10 @@ $tds-action-button-icon-flat-color: #666
     i
       font-size: 16px
   .tds-action-button
-    border: 0;
-    background-color: transparent;
-    outline: 0;
-    padding: 0 2px;
+    border: 0
+    background-color: transparent
+    outline: 0
+    padding: 0 3px
     i
       color: $tds-action-button-icon-flat-color
     span.title
